adicionando rota para adicionar ou remover um participante em uma reserva existente
